--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,9 +3,9 @@ layout: default
 ---
 {% if page.date %}<div class="postdate">Posted on {{ page.date | date_to_string }}{% if page.last_updated %}, last updated on {{ page.last_updated | date_to_string }}{% endif %}</div>{% endif %}
 
-<div class="post">
+<article class="post">
 {{ content }}
-</div>
+</article>
  
 <div id="related">
   <h2>Related Posts</h2>
