render posts to site layout

--- a/_layouts/site.html
+++ b/_layouts/site.html
@@ -29,74 +29,9 @@
    <a id="logo">FreeAir
    </a>
  </div>
+
  <div class="content">
-   <article class="podcast">
-     <div class="title"> Episode #3: AntiPatterns </div>
-     <div class="date">August 12th, 2012 </div>
-     <div id="mp3_audio">
-       <audio id="player" name="player" src="/audio/theme_jingle/freeair.mp3" controls="controls">
-       </audio> <span>FreeAir's Theme Jingle episode.. </span>
-       <a href="#" > Download Episode </a>
-     </div>
-     <div id="summary">
-       <p>Lorem ipsum dolor amet </p>
-     </div>
-     <div id="tags">
-       <a href="#" >Tags #1 </a>
-       <a href="#" >Tags #2 </a>
-       <a href="#" >Tags #3 </a>
-     </div>
-   </article>
-   <article class="podcast">
-     <div class="title"> Episode #2: AntiPatterns </div>
-     <div class="date">August 12th, 2012 </div>
-     <div id="mp3_audio">
-       <audio id="player" name="player" src="/audio/theme_jingle/freeair.mp3" controls="controls">
-       </audio> <span>FreeAir's Theme Jingle episode.. </span>
-       <a href="#" > Download Episode </a>
-     </div>
-     <div id="summary">
-       <p>Lorem ipsum dolor amet </p>
-     </div>
-     <div id="tags">
-       <a href="#" >Tags #1 </a>
-       <a href="#" >Tags #2 </a>
-       <a href="#" >Tags #3 </a>
-     </div>
-   </article>
-   <article class="news">
-     <div class="title">AntiPatterns </div>
-     <div class="date">August 12th, 2012 </div>
-     <div id="summary">
-       <p>It is a long established fact that a reader will be distracted by the
-       readable content of a page when looking at its layout. The point of using
-       Lorem Ipsum is that it has a more-or-less normal distribution of letters,
-       as opposed to using 'Content here, content here', making it look like
-       readable English.</p>
-     </div>
-     <div id="tags">
-       <a href="#" >Tags #1 </a>
-       <a href="#" >Tags #2 </a>
-       <a href="#" >Tags #3 </a>
-     </div>
-   </article>
-   <article class="podcast">
-     <div class="title"> Episode #1: AntiPatterns </div>
-     <div class="date">August 12th, 2012 </div>
-     <div id="mp3_audio">
-       <audio id="player" name="player" src="/audio/theme_jingle/freeair.mp3" controls="controls">
-       </audio> <span>FreeAir's Theme Jingle episode.. </span>
-       <a href="#" > Download Episode </a>
-     </div>
-     <div id="summary">
-       <p>Lorem ipsum dolor amet </p>
-     </div>
-     <div id="tags">
-       <a href="#" >Tags #1 </a>
-       <a href="#" >Tags #2 </a>
-       <a href="#" >Tags #3 </a>
-     </div>
-   </article>
-  </div>
+ {{content}}
+</div>
 </body>
 </html>
