layouts: fixed headings and colors.

--- a/_layouts/site.html
+++ b/_layouts/site.html
@@ -24,10 +24,9 @@
 </script>
 {% endif %}
 </head>
-<body>
+<body class="site">
   <div id="sidebar">
-    <a id="logo">FreeAir
-    </a>
+    <a id="logo" href="/">FreeAir</a>
   </div>
   <div class="content">
     {{content}}
