--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,34 +1,38 @@
 ---
 layout: default
 ---
-{% if page.date %}<div class="postdate">Posted on {{ page.date | date_to_string }}{% if page.last_updated %}, last updated on {{ page.last_updated | date_to_string }}{% endif %}</div>{% endif %}
-
-<article class="post">
-{{ content }}
-</article>
- 
-<div id="related">
-  <h2>Related Posts</h2>
-  <ul class="posts">
-    {% for post in site.related_posts limit:5 %}
-      <li><span>{{ post.date | date_to_string }}</span> - <a href="{{ post.url }}">{{ post.title }}</a></li>
+<article class="{{ page.type }}">
+  <div class="title"> {{page.title}} </div>
+  <div class="date">{{ page.date | date: "%d %B %Y" }}</div>
+  <div id="audio">
+    <div><object width="250" height="250"><param name="movie" value="//www.mixcloud.com/media/swf/player/mixcloudLoader.swf?feed={{ page.feed }}&embed_uuid=8e620926-c71c-488e-b4f8-8777e6e973c0&stylecolor=&embed_type=widget_standard"></param><param name="allowFullScreen" value="true"></param><param name="wmode" value="opaque"></param><param name="allowscriptaccess" value="always"></param><embed src="//www.mixcloud.com/media/swf/player/mixcloudLoader.swf?feed={{ page.feed }}&embed_uuid=8e620926-c71c-488e-b4f8-8777e6e973c0&stylecolor=&embed_type=widget_standard" type="application/x-shockwave-flash" wmode="opaque" allowscriptaccess="always" allowfullscreen="true" width="250" height="250"></embed></object><div style="clear:both; height:3px;"></div></div>
+    {% for pod in page.podcast %}
+    <div class="info">
+      <span class="duration">{{pod.duration}} mins</span><span class="size">{{pod.size}}</span> <a href="{{pod.location}}" target="_blank" >Download</a></span>
+    </div>
     {% endfor %}
-  </ul>
-</div>
+  </div>
+  <div class="post">
+    {{ page.content | markdownify }}
+  </div>
+  <div class="tags">
+    {% for tag in page.tags %}
+    <a href="#" >{{tag}} </a>
+    {% endfor %}
+  </div>
+  <div id='social'>
+    <div id='twitter'>
+      <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://freeair.io{{page.url}}" data-via="freeairio">Tweet</a>
+      <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+    </div>
+  </div>
+  <div id="related">
+    <h2>Related Posts</h2>
+    <ul class="posts">
+      {% for post in site.related_posts limit:5 %}
+        <li><span>{{ post.date | date_to_string }}</span> - <a href="{{ post.url }}">{{ post.title }}</a></li>
+      {% endfor %}
+    </ul>
+  </div>
+</article>
 
-{% if site.disqus %}
-<div id="comments">
-  <h2>Comments</h2>
-  <div id="disqus_thread"></div>
-  <script type="text/javascript">
-    var disqus_identifier = "{{ page.url }}";
-    (function() {
-     var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-     dsq.src = 'http://{{ site.disqus.id }}.disqus.com/embed.js';
-     (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-    })();
-  </script>
-  <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript={{ site.disqus.id }}">comments powered by Disqus.</a></noscript>
-  <a href="http://disqus.com" class="dsq-brlink">blog comments powered by <span class="logo-disqus">Disqus</span></a>
-</div>
-{% endif %}
