--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -132,13 +132,16 @@ article p {
 }
 
 .tags a {
-  padding: 3px 9px;
-  background: #8F8F8F;
+  background: #B9B9B9;
   text-decoration: none;
   border-radius: 13px;
   color: white;
   font-size: 13px;
   margin-right: 5px;
+  text-shadow: 0px 2px 3px #797979;
+  box-shadow: 2px 3px 5px #979797 inset;
+  padding: 4px 12px;
+  font-weight: bold;
 }
 
 .tags a:hover {
