layouts: repeated iTunes link for posts page.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,6 +28,9 @@
 <body class="default">
   <div id="sidebar">
     <a id="logo" href="/">FreeAir</a>
+    <div class="external">
+      <a href="">&#9835; Subscribe on iTunes</a>
+    </div>
   </div>
   <div class="content">
     {{content}}
