--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -34,5 +34,13 @@ layout: default
       {% endfor %}
     </ul>
   </div>
+  <div class="nav">
+    {% if page.previous.url %}
+      <a href="{{ page.previous.url }}" class="previous">Previous</a>
+    {% endif %}
+    {% if page.next.url %}
+      <a href="{{ page.next.url }}" class="next">Next</a>
+    {% endif %}
+  </div>
 </article>
 
