--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -238,3 +238,18 @@ ul.posts li {
   background: gray;
   border-radius: 13px;
 }
+
+.nav {
+  margin: 40px 0;
+}
+
+.nav a {
+  color: gray;
+  text-decoration: none;
+  padding: 8px 17px;
+  background: #ECECEC;
+  border: 1px solid #D5D5D5;
+  border-radius: 8px;
+  font-size: 15px;
+  font-weight: bold;
+}
