--- a/_layouts/site.html
+++ b/_layouts/site.html
@@ -28,8 +28,14 @@
 <body class="site">
   <div id="sidebar">
     <a id="logo" href="/">FreeAir</a>
+    <p class="description">
+    FreeAir is a software development blog and podcast hosted by
+    <a href="http://twitter.com/micrypt">@micrypt</a> & <a
+      href="http://twitter.com/kengimel">@kengimel</a>.
+    </p>
     <div class="external">
-      <a href="">&#9835; Subscribe on iTunes</a>
+      <p><a href="">&#9835; Subscribe via iTunes</a></p>
+      <p><a href="/atom.xml">✩ Subscribe via RSS</a></p>
     </div>
   </div>
   <div class="content">
