--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,8 +34,8 @@
       href="http://twitter.com/kengimel">@kengimel</a>.
     </p>
     <div class="external">
-      <p><a href="">&#9835; Subscribe via iTunes</a></p>
-      <p><a href="/atom.xml">✩ Subscribe via RSS</a></p>
+      <p><a href="https://itunes.apple.com/gb/podcast/freeair/id562708248" target="_blank">&#9835; Subscribe via iTunes</a></p>
+      <p><a href="/atom.xml" target="_blank">✩ Subscribe via RSS</a></p>
     </div>
   </div>
   <div class="content">
