layouts: added player.fm link.

--- a/_layouts/site.html
+++ b/_layouts/site.html
@@ -30,11 +30,12 @@
     <a id="logo" href="/">FreeAir</a>
     <p class="description">
     FreeAir is a software development blog and podcast hosted by
-    <a href="http://twitter.com/micrypt">@micrypt</a> & <a
+    <a href="http://twitter.com/micrypt">@micrypt</a> &amp; <a
       href="http://twitter.com/kengimel">@kengimel</a>.
     </p>
     <div class="external">
       <p><a href="">&#9835; Subscribe via iTunes</a></p>
+      <p><a href="http://player.fm/series/freeair">► Subscribe on Player.fm</a></p>
       <p><a href="/atom.xml">✩ Subscribe via RSS</a></p>
     </div>
   </div>
