--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,6 +35,7 @@
     </p>
     <div class="external">
       <p><a href="">&#9835; Subscribe via iTunes</a></p>
+      <p><a href="http://player.fm/series/freeair">► Subscribe on Player.fm</a></p>
       <p><a href="/atom.xml">✩ Subscribe via RSS</a></p>
     </div>
   </div>
