--- a/_layouts/site.html
+++ b/_layouts/site.html
@@ -31,7 +31,7 @@
     <p class="description">
     FreeAir is a software development blog and podcast hosted by
     <a href="http://twitter.com/micrypt">@micrypt</a> &amp; <a
-      href="http://twitter.com/kengimel">@kengimel</a>.
+      href="http://twitter.com/ikenna_okpala">@ikenna_okpala</a>.
     </p>
     <div class="external">
       <p><a href="https://itunes.apple.com/gb/podcast/freeair/id562708248" target="_blank">&#9835; Subscribe via iTunes</a></p>
