--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,19 +26,7 @@
   {% endif %}
 </head>
 <body class="default">
-  <div id="sidebar">
-    <a id="logo" href="/">FreeAir</a>
-    <p class="description">
-    FreeAir is a software development blog and podcast hosted by
-    <a href="http://twitter.com/micrypt">@micrypt</a> &amp; <a
-      href="http://twitter.com/ikenna_okpala">@ikenna_okpala</a>.
-    </p>
-    <div class="external">
-      <p><a href="https://itunes.apple.com/gb/podcast/freeair/id562708248" target="_blank">&#9835; Subscribe via iTunes</a></p>
-      <p><a href="http://player.fm/series/freeair">► Subscribe on Player.fm</a></p>
-      <p><a href="/atom.xml">✩ Subscribe via RSS</a></p>
-    </div>
-  </div>
+  {% include sidebar.html %}
   <div class="content">
     {{content}}
   </div>
