--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -153,24 +153,16 @@ article p {
 }
 
 .tags {
-  margin-top: 20px;
+  margin-top: 10px;
 }
 
 .tags a {
-  background: #B9B9B9;
   text-decoration: none;
   border-radius: 13px;
-  color: white;
+  color: rgb(184, 184, 184);
   font-size: 13px;
   margin-right: 5px;
-  text-shadow: 0px 2px 3px #797979;
-  box-shadow: 2px 3px 5px #979797 inset;
-  padding: 4px 12px;
   font-weight: bold;
-}
-
-.tags a:hover {
-  background: #CACACA;
 }
 
 #social {
