--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -159,10 +159,10 @@ article p {
 .tags a {
   text-decoration: none;
   border-radius: 13px;
-  color: rgb(184, 184, 184);
+  color: rgb(138, 137, 137);;
   font-size: 13px;
   margin-right: 5px;
-  font-weight: bold;
+  font-weight: normal;
   cursor: default;
 }
 
